# IceRunner

./: Cargo.toml  README.adoc
icerunner/: Cargo.toml
icerunner/assets/: badinput01.soln.txt  badinput01.txt  badinput02.soln.txt  badinput02.txt  badinput03.soln.txt  badinput03.txt  impossible01.soln.txt  impossible01.txt  impossible02.soln.txt  impossible02.txt  impossible03.soln.txt  impossible03.txt  maze1.soln.txt  maze1.txt  maze2.soln.txt  maze2.txt
icerunner/src/: lib.rs  lib_seed.rs  main.rs
puzzle/: Cargo.toml
puzzle/src/: lib.rs
