[package]
name = "icerunner"
version = "0.1.0"
authors = ["Atharva Lele <al8523@rit.edu>", Vaidehi Kalra <vk5548@rit.edu]
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "icerunner"

[dependencies]
bincode = "1.3"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
puzzle = { path = "../puzzle" }
