[package]
name = "puzzle"
version = "0.1.0"
authors = ["Atharva Lele <al8523@rit.edu>", Vaidehi Kalra <vk5548@rit.edu]
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
